--- a/app/src/main/res/layout/activity_pair_ss.xml
+++ b/app/src/main/res/layout/activity_pair_ss.xml
@@ -44,4 +44,16 @@
         android:layout_below="@+id/Password"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="32dp" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:maxLength="20"
+        android:hint="User name"
+        android:ems="10"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/SSNumber"
+        android:layout_alignEnd="@+id/SSNumber"
+        android:id="@+id/Name" />
 </RelativeLayout>
